fix layout issues

--- a/assets/stylesheets/app/header.css.styl
+++ b/assets/stylesheets/app/header.css.styl
@@ -1,11 +1,16 @@
 @import 'mixins'
 
 #app .header {
+  position: absolute
+  top: 0
+  bottom: 0
+  left: 0
+  width: 45px
+
   // hbg-gradient(#5D646D, #8F9398)
   hbg-gradient(#CCCCCC, #DDDDDD)
 
   box-shadow: inset -1px 0 2px rgba(0, 0, 0, 0.3)
-
   vbox()
 
   h1 {
