--- a/assets/stylesheets/app/index.css.styl
+++ b/assets/stylesheets/app/index.css.styl
@@ -1,8 +1,11 @@
 @import 'mixins'
 
 #app {
-  hbox()
-  box-flex(1)
+  position: absolute
+  top: 0
+  right: 0
+  bottom: 0
+  left: 0
 
   .hbox {
     box-flex(1)
