--- a/assets/stylesheets/app/inspector.css.styl
+++ b/assets/stylesheets/app/inspector.css.styl
@@ -3,6 +3,11 @@
 #app .inspector {
   width: 220px
 
+  position: absolute
+  top: 0
+  right: 0
+  bottom: 0
+
   box-shadow: inset 1px 0 2px rgba(0, 0, 0, 0.3)
   background: #F5F5F5
   color: #000
