--- a/assets/stylesheets/app/stage.css.styl
+++ b/assets/stylesheets/app/stage.css.styl
@@ -1,12 +1,14 @@
 @import 'mixins'
 
 #app .stage {
-  vbox()
-  box-flex(1)
+  position: absolute
+  top: 0
+  right: 220px
+  bottom: 0
+  left: 45px
 
   // background: url('bg-grid.png')
   background: #FFF
-  position: relative
   overflow: auto
   // -webkit-user-select: text
 
