--- a/assets/stylesheets/theme.css.styl
+++ b/assets/stylesheets/theme.css.styl
@@ -10,10 +10,6 @@ body, html {
 }
 
 body {
-  display: -webkit-box;
-  -webkit-box-orient: vertical;
-  -webkit-box-align: stretch;
-
   text-rendering: optimizeLegibility
   -webkit-font-smoothing: antialiased
   color: #626262;
